# competitive-programming

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Tester/: config.txt  tester.py
Training/: a.out  main.cpp
auto_judge/: config.txt  main.py
creating/: a.out  before_coding.txt  before_submitting.txt  cpp14.cpp  cpp17.cpp  java.java  main.c  python.py  python3_6.py  stdin
doing/: B-small-practice.in  a.out  c++.cpp  c_plus_plus.cpp  input_generator.sh  lowest_common_ancestor.cpp  main.c  main.cpp  main.py  mx480.txt  output_generator.sh  project.sublime-project  project.sublime-workspace  python.py  solution  stderr  stdin  stdin.txt  stdout  stdout.txt  untitled.cpp
done/: 0 - PYTHON.py  Digit Dynamic Programming.cpp  KMP.cpp  Mo (SQRT Decomposition).cpp  flow.cpp  gogle
notebook/: 0: Bellman Ford.cpp  Fast Read.cpp  Prefix Sum 2D.cpp  Ternary Search.cpp  Topological Sort (DFS).cpp  flow.cpp  geometry 2D.cpp
reference/: Fenwick Tree (BIT) 2D.cpp  LCA.cpp  Mo (SQRT Decomposition).cpp  Sparse Table 1D.cpp  aho_corasick.cpp  cpp-tricks.cpp  fast scanf.cpp  fenwick-tree.cpp  flow min cost.cpp  floyd_warshall.cpp  gaussian_elimination.cpp  geometry 2d.cpp  geometry 3d.cpp  geometry-2D-new.cpp  geometry_2d.cpp  inclusion exclusion.cpp  lowest_common_ancestor.cpp  math.cpp  meet_in_the_middle.cpp  palindrome-counting.cpp  segment-tree.cpp  sqrt mo.cpp  topologial sort.cpp
solved-problems/: .gitignore
src/: CMakeLists.txt
template/: hacker-cup.cpp  single-test-case.cpp  (+4 more)
templates/c-plus-plus/src/: CMakeLists.txt  main.cpp
tst/: CMakeLists.txt
(+298 files in other folders)
